resize images and fix spacing for text

--- a/instagram_clone/frontend/src/posts/SimplePostCard.css
+++ b/instagram_clone/frontend/src/posts/SimplePostCard.css
@@ -1,4 +1,4 @@
 .SimplePostCard-Image {
-	max-width: 90%;
+	max-width: 95%;
 	object-fit: contain;
 }
