--- a/instagram_clone/frontend/src/posts/postcard.css
+++ b/instagram_clone/frontend/src/posts/postcard.css
@@ -3,8 +3,8 @@
 	width: fit-content;
 	margin-bottom: 100px;
 	background-color: #ffffff;
-	width: 500px;
-	max-width: 500px;
+	width: 650px;
+	max-width: 650px;
 	margin: auto;
 	border-radius: 10px;
 }
